# logremedy-ai

./: .gitignore  README.md  coverage.json  pyproject.toml
.github/workflows/: ci.yml
dataset/real_cases/: README.md  case_schema.example.json
docs/: lca_ci_builds_repair_integration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  appConfig.js  resultFormatting.js  resultFormatting.test.js  styles.css  viewModel.js
gha_remediator/: app_settings.py  classifier.py  cli.py  desktop_app_modular.py  logs.py  pipeline.py  preprocess.py  prompts.py  rag.py  rca.py  repo_context.py  runtime_factory.py  types.py  web_app.py
gha_remediator/app/: __init__.py  desktop.py  renderers.py  runtime.py
gha_remediator/cli_support/: __init__.py  dispatch.py  evaluation_commands.py  export_commands.py  payloads.py  runtime_commands.py  shared.py
gha_remediator/evaluation/: benchmark_runner.py  lca_audit.py  logger.py  real_cases.py  runner.py
gha_remediator/ingestion/: github_actions.py  synthetic_loader.py
gha_remediator/llm/: base.py  github_models_client.py  openai_client.py
gha_remediator/remediation/: guidance.py  llm_planner.py  templates.py
gha_remediator/scripts/: audit_lca_dataset.py  materialize_lca_repos.py  replay_verification_without_patch_apply.py  run_component_batches.py  run_full_benchmark_batches.py
gha_remediator/services/: __init__.py  analysis_runtime.py
gha_remediator/tests/: test_analysis_runtime.py  test_app_settings.py  test_benchmark_runner.py  test_classify.py  test_cli_debug_commands.py  (+14 more)
(+38 files in other folders)
