[project]
name = "gha-remediator"
version = "0.2.0"
description = "Prototype: GitHub Actions log RCA + verifiable remediation (optional LLM)"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[tool.setuptools.packages.find]
include = ["gha_remediator*"]

[project.optional-dependencies]
llm = ["openai>=1.0.0", "pyyaml>=6.0"]
web = ["flask>=3.0"]

[project.scripts]
gha-remediator = "gha_remediator.cli:main"
gha-remediator-web = "gha_remediator.web_app:main"

[tool.pytest.ini_options]
testpaths = ["gha_remediator/tests"]
