[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gha-remediator"
version = "0.2.0"
description = "GitHub Actions log analysis and verification-gated remediation planning"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "rank_bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["gha_remediator*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
web = ["flask>=3.0"]

[project.scripts]
gha-remediator = "gha_remediator.cli:main"
gha-remediator-web = "gha_remediator.web_app:main"

[tool.pytest.ini_options]
testpaths = ["gha_remediator/tests"]
